syntax = "proto3";
option go_package = "pb";

service PipelineEndpoint {
    rpc Run (stream RunRequest) returns (stream RunResponse) {}
    rpc Upload (stream RunRequest) returns (stream RunResponse) {}
    rpc ListTopics (Empty) returns (ListTopicsResponse) {}
}

message Empty {}

message ListTopicsResponse {
    repeated string topics = 1;
}

message RunRequest {
    string deploymentOwner = 1;
    string deploymentName = 2;
    string endpointPath = 3;
    string traceID = 5;
    string contentType = 6;
    bytes message = 7;
    map<string, string> parameters = 8;
    uint64 streamOffset = 9;
}

message RunResponse {
    uint64 streamOffset = 3;
}